--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@
   }
 
   body {
-    font: 16px Helvetica, Sans-Serif;
+    font: 18px Helvetica, Sans-Serif;
     line-height: 24px;
-  /*background: url(images/metal.jpg);
-
-    background-color: <img src="bubbly.gif" />;*/
 
     background-image: url("Bubble2.webm");
-   background-size: width: auto;
-                    height: auto;
+
+
+
+margin: 10px 150px;
   }
   .clear {
     clear: both;
@@ -29,6 +28,7 @@
     background: blue ;
     color: #fff;
   }
+
 
 
   .container {
@@ -66,8 +66,6 @@
     font-size: 20px;
     font-weight: bold;
     letter-spacing: -2px;
-
-    /*add bottom line*/
   }
 
   h2 {
@@ -97,14 +95,15 @@
   }
 
   a {
-    color: rgb(13, 196, 199);
+    color: rgb(218, 70, 21);
     text-decoration: none;
+    font-size: 20px;
     border-bottom: 1px dotted #999;
   }
 
   a:hover {
     border-bottom-style: solid;
-    color: Green;
+    color: yellow;
   }
 
   ul {
@@ -172,9 +171,11 @@
 /*     animation-name: example;
     animation-duration: 4s;
     animation-iteration-count: infinite; */
-background: orangered;
+
     animation: example 2s infinite;
 }
+
+
 .fullscreen-bg {
     position: fixed;
     top: 0;
@@ -192,3 +193,7 @@ background: orangered;
     width: 100%;
     height: 100%;
 }
+
+#navbar li {display: inline;
+
+            }
